cfn_benchmark/cfn_templates/iksena__llm-iac-data-analysis/Data__groud_truth__template__url2png-loadtest.yaml
AWSTemplateFormatVersion: '2010-09-09'
Description: 'AWS in Action: chapter 17 (URL2PNG)'
Mappings:
  RegionMap:
    'eu-north-1':
      AMI: 'ami-05bc2576a72f22c39'
    'ap-south-1':
      AMI: 'ami-0002bdad91f793433'
    'eu-west-3':
      AMI: 'ami-0c73cd1c5347436f3'
    'eu-west-2':
      AMI: 'ami-029ed17b4ea379178'
    'eu-west-1':
      AMI: 'ami-04632f3cef5083854'
    'ap-northeast-3':
      AMI: 'ami-0ae88850834d2c589'
    'ap-northeast-2':
      AMI: 'ami-0263588f2531a56bd'
    'ap-northeast-1':
      AMI: 'ami-0abaa5b0faf689830'
    'sa-east-1':
      AMI: 'ami-053a035b046dbb704'
    'ca-central-1':
      AMI: 'ami-0173297cea9ba27b0'
    'ap-southeast-1':
      AMI: 'ami-0d1d4b8d5a0cd293f'
    'ap-southeast-2':
      AMI: 'ami-0f4484f62c4fd8767'
    'eu-central-1':
      AMI: 'ami-099ccc441b2ef41ec'
    'us-east-1':
      AMI: 'ami-061ac2e015473fbe2'
    'us-east-2':
      AMI: 'ami-056b1936002ca8ede'
    'us-west-1':
      AMI: 'ami-028f2b5ee08012131'
    'us-west-2':
      AMI: 'ami-0e21d4d9303512b8e'
Resources:
  VPC:
    Type: 'AWS::EC2::VPC'
    Properties:
      CidrBlock: '172.31.0.0/16'
      EnableDnsHostnames: true
  InternetGateway:
    Type: 'AWS::EC2::InternetGateway'
    Properties: {}
  VPCGatewayAttachment:
    Type: 'AWS::EC2::VPCGatewayAttachment'
    Properties:
      VpcId: !Ref VPC
      InternetGatewayId: !Ref InternetGateway
  SubnetA:
    Type: 'AWS::EC2::Subnet'
    Properties:
      AvailabilityZone: !Select [0, !GetAZs '']
      CidrBlock: '172.31.38.0/24'
      VpcId: !Ref VPC
  SubnetB:
    Type: 'AWS::EC2::Subnet'
    Properties:
      AvailabilityZone: !Select [1, !GetAZs '']
      CidrBlock: '172.31.37.0/24'
      VpcId: !Ref VPC
  RouteTable:
    Type: 'AWS::EC2::RouteTable'
    Properties:
      VpcId: !Ref VPC
  RouteTableAssociationA:
    Type: 'AWS::EC2::SubnetRouteTableAssociation'
    Properties:
      SubnetId: !Ref SubnetA
      RouteTableId: !Ref RouteTable
  RouteTableAssociationB:
    Type: 'AWS::EC2::SubnetRouteTableAssociation'
    Properties:
      SubnetId: !Ref SubnetB
      RouteTableId: !Ref RouteTable
  RoutePublicNATToInternet:
    Type: 'AWS::EC2::Route'
    Properties:
      RouteTableId: !Ref RouteTable
      DestinationCidrBlock: '0.0.0.0/0'
      GatewayId: !Ref InternetGateway
    DependsOn: VPCGatewayAttachment
  NetworkAcl:
    Type: 'AWS::EC2::NetworkAcl'
    Properties:
      VpcId: !Ref VPC
  SubnetNetworkAclAssociationA:
    Type: 'AWS::EC2::SubnetNetworkAclAssociation'
    Properties:
      SubnetId: !Ref SubnetA
      NetworkAclId: !Ref NetworkAcl
  SubnetNetworkAclAssociationB:
    Type: 'AWS::EC2::SubnetNetworkAclAssociation'
    Properties:
      SubnetId: !Ref SubnetB
      NetworkAclId: !Ref NetworkAcl
  NetworkAclEntryIngress:
    Type: 'AWS::EC2::NetworkAclEntry'
    Properties:
      NetworkAclId: !Ref NetworkAcl
      RuleNumber: 100
      Protocol: -1
      RuleAction: allow
      Egress: false
      CidrBlock: '0.0.0.0/0'
  NetworkAclEntryEgress:
    Type: 'AWS::EC2::NetworkAclEntry'
    Properties:
      NetworkAclId: !Ref NetworkAcl
      RuleNumber: 100
      Protocol: -1
      RuleAction: allow
      Egress: true
      CidrBlock: '0.0.0.0/0'
  SecurityGroup:
    Type: 'AWS::EC2::SecurityGroup'
    Properties:
      GroupDescription: 'url2png'
      VpcId: !Ref VPC
      SecurityGroupIngress:
      - CidrIp: '0.0.0.0/0'
        FromPort: 22
        IpProtocol: tcp
        ToPort: 22
  IamRole:
    Type: 'AWS::IAM::Role'
    Properties:
      AssumeRolePolicyDocument:
        Version: '2012-10-17'
        Statement:
        - Effect: Allow
          Principal:
            Service:
            - 'ec2.amazonaws.com'
          Action: 'sts:AssumeRole'
      Policies:
      - PolicyName: url2png
        PolicyDocument:
          Version: '2012-10-17'
          Statement:
          - Effect: Allow
            Action: 's3:*'
            Resource:
            - !Sub 'arn:aws:s3:::ch17-url2png-${AWS::AccountId}'
            - !Sub 'arn:aws:s3:::ch17-url2png-${AWS::AccountId}/*'
          - Effect: Allow
            Action: 'sqs:*'
            Resource: !Sub 'arn:aws:sqs:${AWS::Region}:${AWS::AccountId}:${SQSQueue.QueueName}'
      - PolicyName: ssm
        PolicyDocument:
          Version: '2012-10-17'
          Statement:
          - Effect: Allow
            Action:
            - 'ssmmessages:*' # SSM Agent by https://docs.aws.amazon.com/systems-manager/latest/userguide/systems-manager-setting-up-messageAPIs.html
            - 'ssm:UpdateInstanceInformation' # SSM agent by https://docs.aws.amazon.com/systems-manager/latest/userguide/systems-manager-setting-up-messageAPIs.html
            - 'ec2messages:*' # SSM Session Manager by https://docs.aws.amazon.com/systems-manager/latest/userguide/systems-manager-setting-up-messageAPIs.html
            Resource: '*'
  IamInstanceProfile:
    Type: 'AWS::IAM::InstanceProfile'
    Properties:
      Roles:
      - !Ref IamRole
  S3Bucket:
    Type: 'AWS::S3::Bucket'
    Properties:
      BucketName: !Sub 'ch17-url2png-${AWS::AccountId}'
      OwnershipControls:
        Rules:
        - ObjectOwnership: BucketOwnerPreferred
      PublicAccessBlockConfiguration:
        BlockPublicAcls: false
        BlockPublicPolicy: true
        IgnorePublicAcls: false
        RestrictPublicBuckets: true
  SQSQueue:
    Type: 'AWS::SQS::Queue'
    Properties:
      QueueName: url2png
  LaunchTemplate:
    Type: 'AWS::EC2::LaunchTemplate'
    Properties:
      LaunchTemplateData:
        IamInstanceProfile:
          Name: !Ref IamInstanceProfile
        ImageId: !FindInMap [RegionMap, !Ref 'AWS::Region', AMI]
        Monitoring:
          Enabled: false
        InstanceType: 't3.micro'
        NetworkInterfaces:
        - AssociatePublicIpAddress: true
          DeviceIndex: 0
          Groups:
          - !Ref SecurityGroup
        UserData:
          'Fn::Base64': !Sub |
            #!/bin/bash -ex
            curl -sL https://rpm.nodesource.com/setup_14.x | bash -
            amazon-linux-extras install epel -y
            yum clean metadata
            yum --enablerepo=nodesource install -y nodejs
            yum install -y libfonts chromium
            wget -q -T 60 https://github.com/AWSinAction/code3/archive/refs/heads/main.zip
            unzip main.zip
            cd code3-main/chapter14/url2png/
            npm install
            echo "{\"QueueUrl\": \"${SQSQueue}\", \"Bucket\": \"ch17-url2png-${AWS::AccountId}\"}" > config.json
            sudo -u ec2-user AWS_REGION=${AWS::Region} node worker.js
  AutoScalingGroup:
    Type: 'AWS::AutoScaling::AutoScalingGroup'
    Properties:
      LaunchTemplate:
        LaunchTemplateId: !Ref LaunchTemplate
        Version: !GetAtt 'LaunchTemplate.LatestVersionNumber'
      MinSize: 1
      MaxSize: 2
      HealthCheckGracePeriod: 120
      HealthCheckType: EC2
      VPCZoneIdentifier:
      - !Ref SubnetA
      - !Ref SubnetB
      Tags:
      - PropagateAtLaunch: true
        Value: 'url2png-consumer'
        Key: Name
    DependsOn: VPCGatewayAttachment
  ScalingUpPolicy:
    Type: 'AWS::AutoScaling::ScalingPolicy'
    Properties:
      AdjustmentType: 'ChangeInCapacity'
      AutoScalingGroupName: !Ref AutoScalingGroup
      PolicyType: 'StepScaling'
      MetricAggregationType: 'Average'
      EstimatedInstanceWarmup: 60
      StepAdjustments:
      - MetricIntervalLowerBound: 0
        ScalingAdjustment: 1
  HighQueueAlarm:
    Type: 'AWS::CloudWatch::Alarm'
    Properties:
      EvaluationPeriods: 1
      Statistic: Sum
      Threshold: 5
      AlarmDescription: 'Alarm if queue length is higher than 5.'
      Period: 300
      AlarmActions:
      - !Ref ScalingUpPolicy
      Namespace: 'AWS/SQS'
      Dimensions:
      - Name: QueueName
        Value: !Sub '${SQSQueue.QueueName}'
      ComparisonOperator: GreaterThanThreshold
      MetricName: ApproximateNumberOfMessagesVisible
  ScalingDownPolicy:
    Type: 'AWS::AutoScaling::ScalingPolicy'
    Properties:
      AdjustmentType: 'ChangeInCapacity'
      AutoScalingGroupName: !Ref AutoScalingGroup
      PolicyType: 'StepScaling'
      MetricAggregationType: 'Average'
      EstimatedInstanceWarmup: 60
      StepAdjustments:
      - MetricIntervalUpperBound: 0
        ScalingAdjustment: -1
  LowQueueAlarm:
    Type: 'AWS::CloudWatch::Alarm'
    Properties:
      EvaluationPeriods: 1
      Statistic: Sum
      Threshold: 5
      AlarmDescription: 'Alarm if queue length is lower than 5.'
      Period: 300
      AlarmActions:
      - !Ref ScalingDownPolicy
      Namespace: 'AWS/SQS'
      Dimensions:
      - Name: QueueName
        Value: !Sub '${SQSQueue.QueueName}'
      ComparisonOperator: LessThanThreshold
      MetricName: ApproximateNumberOfMessagesVisible
  LoadTestServer:
    Type: 'AWS::EC2::Instance'
    DependsOn: VPCGatewayAttachment
    Properties:
      ImageId: !FindInMap [RegionMap, !Ref 'AWS::Region', AMI]
      InstanceType: t3.micro
      IamInstanceProfile: !Ref IamInstanceProfile
      UserData:
        'Fn::Base64': !Sub |
          #!/bin/bash -ex
          for i in `seq 1 25`;
          do
            aws sqs send-message --queue-url ${SQSQueue} --message-body "{\"id\": \"$i.www.google.com\", \"url\": \"http://www.google.com\"}" --region ${AWS::Region}
            aws sqs send-message --queue-url ${SQSQueue} --message-body "{\"id\": \"$i.www.youtube.com\", \"url\": \"http://www.youtube.com\"}" --region ${AWS::Region}
            aws sqs send-message --queue-url ${SQSQueue} --message-body "{\"id\": \"$i.www.amazon.com\", \"url\": \"http://www.amazon.com\"}" --region ${AWS::Region}
            aws sqs send-message --queue-url ${SQSQueue} --message-body "{\"id\": \"$i.www.twitter.com\", \"url\": \"http://www.twitter.com\"}" --region ${AWS::Region}
            aws sqs send-message --queue-url ${SQSQueue} --message-body "{\"id\": \"$i.www.linkedin.com\", \"url\": \"http://www.linkedin.com\"}" --region ${AWS::Region}
            aws sqs send-message --queue-url ${SQSQueue} --message-body "{\"id\": \"$i.www.ebay.com\", \"url\": \"http://www.ebay.com\"}" --region ${AWS::Region}
            aws sqs send-message --queue-url ${SQSQueue} --message-body "{\"id\": \"$i.www.instagram.com\", \"url\": \"http://www.instagram.com\"}" --region ${AWS::Region}
            aws sqs send-message --queue-url ${SQSQueue} --message-body "{\"id\": \"$i.www.reddit.com\", \"url\": \"http://www.reddit.com\"}" --region ${AWS::Region}
            aws sqs send-message --queue-url ${SQSQueue} --message-body "{\"id\": \"$i.www.pinterest.com\", \"url\": \"http://www.pinterest.com\"}" --region ${AWS::Region}
            aws sqs send-message --queue-url ${SQSQueue} --message-body "{\"id\": \"$i.www.wordpress.com\", \"url\": \"http://www.wordpress.com\"}" --region ${AWS::Region}
          done
      Tags:
      - Key: Name
        Value: 'url2png-loadtest'
      NetworkInterfaces:
      - AssociatePublicIpAddress: true
        DeviceIndex: 0
        GroupSet:
        - !Ref SecurityGroup
        SubnetId: !Ref SubnetA
Outputs:
  BucketName:
    Value: !Ref S3Bucket
    Description: 'The name of the S3 bucket'
